<resources>
    <string name="app_name">Kuittailija</string>
    <string name="item_price">%1$.2f %2$s</string>
    <string name="generic_reply_positive">Okei</string>
    <string name="generic_reply_negative">Peruuta</string>
    <string name="generic_reply_clear">Tyhjennä</string>
    <string name="generic_reply_undo">Kumoa</string>
    <string name="receipt_default_name">Kuitti %1$s</string>
    <string name="receipt_date_hint">Päivämäärä…</string>
    <string name="receipt_name_hint">Kuitin nimi…</string>
    <string name="receipt_save_button">Tallenna kuitti</string>
    <string name="receipt_total_price">Summa kuitilla: %1$.2f %2$s</string>
    <string name="receipt_list_total_price">Kuittien kokonaissumma: %1$.2f %2$s</string>
    <string name="receipt_save_successful">Kuitin tallennus onnistui!</string>
    <string name="receipt_list_limit_time">Rajaa hakua:</string>
    <string name="receipt_list_start_date">Kuitit alkaen</string>
    <string name="receipt_list_end_date">Kuitit loppuen</string>
    <string name="header_receipt_name">Tuotenimi</string>
    <string name="header_receipt_category">Kategoria</string>
    <string name="header_receipt_price">Hinta</string>
    <string name="header_receipt_list">Kuittihistoria</string>
    <string name="header_new_category">Uusi kategoria</string>
    <string name="header_modify_category">Muokkaa kategoriaa</string>
    <string name="header_new_receipt">Uusi kuitti</string>
    <string name="header_all_categories">Kaikki kategoriat</string>
    <string name="error_no_text_found">Yhtään tuotetta ei näkynyt!</string>
    <string name="error_no_products_in_receipt">Tyhjää kuittia ei voi tallentaa!</string>
    <string name="error_empty_product">Tyhjää ei voi ostaa!</string>
    <string name="error_no_price">Tuotteella ei ole hintaa!</string>
    <string name="error_invalid_price">Tuotteen hinta on virheellinen!</string>
    <string name="error_invalid_category">Tuotteen kategoria on virheellinen!</string>
    <string name="error_no_start_date">Alkupäivämäärää ei ole asetettu!</string>
    <string name="error_no_end_date">Loppupäivämäärää ei ole asetettu!</string>
    <string name="error_no_timestep">Aikaväliä ei ole määritetty</string>
    <string name="error_empty_word_to_ignore">Tyhjää sanaa ei voi lisätä!</string>
    <string name="error_word_to_ignore_exists">Tämä sana on jo lisätty!</string>
    <string name="error_update_info_failed">Versiotiedon haku epäonnistui!</string>
    <string name="error_update_message_failed">Viestipalveluun ei saatu yhteyttä!</string>
    <string name="error_delete_default_category">Vakiokategoriaa ei voida poistaa!</string>
    <string name="error_modify_default_category">Vakiokategoriaa ei voida muokata!</string>
    <string name="error_spending_overview_create_failed">Yhteenvedon muodostus epäonnistui!</string>
    <string name="error_camera_permissions_not_granted">Kameran käyttöoikeuksia ei sallittu!</string>
    <string name="error_creating_temporary_receipt">Keskeneräisen kuitin tallennus epäonnistui!</string>
    <string name="error_loading_temporary_receipt">Keskeneräisen kuitin lataus epäonnistui!</string>
    <string name="error_no_products_to_process">Kuitilla ei ole tuotteita!</string>
    <string name="receipt_info_products">Tuotteet kuitilla:</string>
    <string name="hint_receipt_date">Kuitin päivämäärä…</string>
    <string name="hint_product_name">Tuotenimi…</string>
    <string name="hint_product_price">Hinta…</string>
    <string name="load_process_camera_image">Luetaan tekstiä…</string>
    <string name="load_save_receipt">Tallennetaan kuittia…</string>
    <string name="load_modify_category">Muutetaan kategoriaa…</string>
    <string name="load_delete_category">Poistetaan kategoriaa…</string>
    <string name="load_update_products">Päivitetään tuotteita…</string>
    <string name="load_fix_products">Korjataan tuotteita…</string>
    <string name="load_categorize_products">Kategoroidaan…</string>
    <string name="product_list_limit_category">Näytettävät kategoriat</string>
    <string name="spending_activity_header">Kulutustarkastelu</string>
    <string name="spending_activity_info">Tarkastele kulutusta kategorian mukaan. Valitse aikaväli ja jakson pituus</string>
    <string name="spending_time_range">%1$s - %2$s</string>
    <string name="spending_total_price">Yhteensä: %1$.2f %2$s</string>
    <string name="spending_alert_positive">Jatka</string>
    <string name="spending_alert_negative">Peruuta</string>
    <string name="spending_time_warning">Pitkällä aikavälillä haku voi kestää kauan.
        Haluatko varmasti jatkaa?</string>
    <string name="spending_generate_overview">Muodosta yhteenveto</string>
    <string name="camera_reading_complete">Kuitilta luetut tuotteet</string>
    <string name="camera_number_of_items">Löydettiin %1$d tuotetta kuitilta.
        Lisätäänkö uudelle kuitille?</string>
    <string name="camera_number_of_items_existing">Löydettiin %1$d tuotetta kuitilta.
        Lisätäänkö keskeneräiselle kuitille?</string>
    <string name="camera_alert_positive">Lisää kuitille</string>
    <string name="camera_alert_negative">Peruuta lisäys</string>
    <string name="delete_from_new_receipt">Poistettiin %1$s</string>
    <string name="delete_product_header">Poista tuote %1$s</string>
    <string name="delete_product_message">Haluatko varmasti poistaa tuotteen?
        Tuote poistuu kuittilistoista, mutta kuittien kokonaissummat pysyvät ennallaan</string>
    <string name="delete_receipt_header">Poista kuitti</string>
    <string name="delete_receipt_message">Haluatko varmasti poistaa tämän kuitin?</string>
    <string name="new_product_name">Tuotenimi…</string>
    <string name="new_product_category">Kategoria:</string>
    <string name="new_product_price">Hinta…</string>
    <string name="new_product_header">Lisää uusi tuote</string>
    <string name="new_product_confirm">Lisää</string>
    <string name="edit_product_header">Muokkaa tuotetta</string>
    <string name="edit_product_confirm">Tallenna</string>
    <string name="settings_header">Asetukset</string>
    <string name="settings_header_general">Yleiset</string>
    <string name="settings_header_camera">Kuitin lukuasetukset</string>
    <string name="settings_header_fixers">Tuotekorjausasetukset</string>
    <string name="setting_user_name_header">Käyttäjänimi</string>
    <string name="setting_user_name_hint">Käyttäjänimi…</string>
    <string name="setting_currency_header">Valuutta:</string>
    <string name="setting_max_price_header">Maksimihinta:</string>
    <string name="setting_max_price_hint">Maksimihinta…</string>
    <string name="setting_vertical_offset_header">Pystysuunt. virhemarginaali (pikseliä):</string>
    <string name="setting_vertical_offset_hint">Virhemarginaali…</string>
    <string name="setting_words_to_ignore_hint">Ohitettavat sanat:</string>
    <string name="setting_words_to_ignore_description">Kuiteissa esiintyviä sanoja, joita ei haluta
        tulkita tuotteeksi (esimerkiksi "Yhteensä", "KPL" jne.)</string>
    <string name="setting_similarity_guess_header">Samankaltaisuusvaatimus (0–100 %):</string>
    <string name="setting_similarity_guess_hint">0–100</string>
    <string name="word_to_ignore_add_header">Uusi ohitettava sana</string>
    <string name="word_to_ignore_add_hint">Sana…</string>
    <string name="app_update_header">Päivitys saatavilla!</string>
    <string name="app_update_info">Sovelluksen toiminnallisuus ja käytettävyys on läpikäynyt kehitystä.
        Uuden version voi sovelluksen GitHubista (etsi viimeisin versio ja lataa .apk-päätteinen tiedosto)</string>
    <string name="app_update_version_compare">Asennettu versio: %1$s | Uusin versio: %2$s</string>
    <string name="app_update_link_short">GitHubista</string>
    <string name="app_update_decline">EnVitussa</string>
    <string name="app_update_changelog_header">Mitä uutta?</string>
    <string name="app_update_changelog_version">Versio %1$s</string>
    <string name="camera_orientation_hint">Pyri ottamaan kuva mahdollisimman suorassa.</string>
    <string name="category_delete_header">Poista kategoria</string>
    <string name="category_delete_warning">Haluatko varmasti poistaa kategorian %1$s?
        \nKaikki kategoriaan kuuluvat tuotteet siirretään kategoriaan %2$s.</string>
    <string name="category_edit_header">Muuta kategoria</string>
    <string name="new_category_added">Uusi kategoria lisätty!</string>
    <string name="category_edit_warning"><![CDATA[
    Muutetaanko kategoria <i>%1$s</i> kategoriaksi <i>%2$s</i>?<br>Kaikki kategoriaan kuuluvat tuotteet siirretään uuteen kategoriaan.
    ]]></string>
    <string name="new_receipt_request_exit_header">Keskeytä kuitin luonti?</string>
    <string name="new_receipt_request_exit_message">Kuitilla on %1$d tuotetta. Hylätäänkö kuitti?</string>
    <string name="new_receipt_create_temp_receipt">Tall. keskener.</string>
    <string name="new_receipt_temp_receipt_created">Kuitti tallennettu keskeneräisenä</string>
    <string name="new_receipt_continue_with_camera_header">Lisää uusia tuotteita kamerasta</string>
    <string name="new_receipt_continue_with_camera_message">Haluatko lisätä kuitille uusia tuotteita kuvan perusteella?</string>
    <string name="new_receipt_fix_options_header">Lisätoiminnot</string>
    <string name="new_receipt_fix_options_info">Nämä asetukset hyödyntävät aiemmin lisättyjen kuittien tietoja korjaamaan mahdollisia virheitä.</string>
    <string name="new_receipt_fix_similarity">Korjaa tuotteet</string>
    <string name="new_receipt_fix_guess_category">Arvaa kategoriat</string>
    <string name="new_receipt_fix_nothing_to_fix">Ei korjattavia tuotteita.</string>
    <string name="new_receipt_fix_similarity_complete">Korjattiin %1$d tuotetta.</string>
    <string name="main_text_greeting">Hei %1$s!</string>
    <string name="main_text_spending_current_header">Kulutus tässä kuussa:</string>
    <string name="main_text_spending_previous_header">Tässä vaiheessa viime kuussa:</string>
    <string name="main_text_management_header">Hallinta</string>
    <string name="main_text_new_receipt_header">Luo uusi kuitti</string>
    <string name="main_text_spending_header">Ostotarkastelu</string>
    <string name="main_button_product_list">Tuotelista</string>
    <string name="main_button_category_list">Kategorialista</string>
    <string name="main_button_new_receipt_camera">Kuvaa uusi kuitti</string>
    <string name="main_button_new_receipt_manual">Uusi tyhjä kuitti</string>
    <string name="main_button_continue_receipt">Jatka keskeytettyä</string>
    <string name="main_button_user_guide">Käyttöohje</string>
    <string name="copy_receipt_products_header">Kopioi tuotteet</string>
    <string name="copy_receipt_products_message">Kopioi tuotteet uudelle kuitille?</string>
    <string name="warning_overview_price_mismatch">Tuotteiden yhteishinta %1$.2f %2$s ei vastaa kuittien hintaa %3$.2f %2$s. Olet ehkä poistanut joitain tuotteita, jolloin ne eivät näy yhteenvedossa!</string>
    <string-array name="spending_timestep_array">
        <item>Valitse aika-asteikko</item>
        <item>Viikko</item>
        <item>Kuukausi</item>
    </string-array>
    <string-array name="month_array">
        <item>Tammikuu</item>
        <item>Helmikuu</item>
        <item>Maaliskuu</item>
        <item>Huhtikuu</item>
        <item>Toukokuu</item>
        <item>Kesäkuu</item>
        <item>Heinäkuu</item>
        <item>Elokuu</item>
        <item>Syyskuu</item>
        <item>Lokakuu</item>
        <item>Marraskuu</item>
        <item>Joulukuu</item>
    </string-array>
    <string-array name="settings_currency_symbol">
        <item>€</item>
        <item>$</item>
        <item>£</item>
    </string-array>
</resources>