<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingsActivity">

    <LinearLayout
        android:id="@+id/settingsTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/settingsReturnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="start"
            android:text="← "
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginBottom="6dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/settingsTopBar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_header_general"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="6dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_user_name_header"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/settingsNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_user_name_hint"
                android:autofillHints="username"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_currency_header"
                android:textSize="14sp" />
            <Spinner
                android:id="@+id/settingsCurrencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="36dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:layout_marginVertical="14dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_header_camera"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="6dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/setting_max_price_header"/>

            <EditText
                android:id="@+id/settingsMaxPriceEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginBottom="4dp"
                android:hint="@string/setting_max_price_hint"
                android:autofillHints="" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/setting_vertical_offset_header"/>

            <EditText
                android:id="@+id/settingsOffsetEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginBottom="4dp"
                android:hint="@string/setting_vertical_offset_hint"
                android:autofillHints=""
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/setting_words_to_ignore_hint"/>
            <EditText
                android:id="@+id/wordsToIgnoreEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:focusable="false"
                android:hint="@string/setting_words_to_ignore_hint"
                android:autofillHints=""/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:layout_marginVertical="14dp"
                android:background="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_header_fixers"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="6dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/setting_similarity_guess_header"/>

            <EditText
                android:id="@+id/settingsFixSimilarityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginBottom="4dp"
                android:hint="@string/setting_similarity_guess_hint"
                android:autofillHints="" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>