<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/spendingReturnButton"
        android:background="@drawable/baseline_arrow_back_24"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spending_activity_header"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/spending_activity_info"
        android:layout_marginBottom="6dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/spendingStartDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/receipt_list_start_date"
            />
        <EditText
            android:id="@+id/spendingEndDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/receipt_list_end_date"
            />
    </LinearLayout>
    <Spinner
        android:id="@+id/spendingTimeStepSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="6dp"
        android:spinnerMode="dialog"
        />
    <Button
        android:id="@+id/spendingSearchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="6dp"
        android:text="@string/spending_generate_overview"
        />
    <TextView
        android:id="@+id/spendingWarningTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/warning_overview_price_mismatch"
        android:textColor="@color/warning_yellow"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/spendingRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_spending_overview"
        />

</LinearLayout>