<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="220dp"
    android:minHeight="300dp"
    android:paddingHorizontal="5dp"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addItemPopupHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_product_header"
        android:layout_gravity="center"
        android:padding="6dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/addProductNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textColorHint="@color/edit_text_grey"
        android:hint="@string/new_product_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        android:text="@string/new_product_category" />

    <TextView
        android:id="@+id/addProductCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/editbox_background"
        app:drawableEndCompat="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:textColor="@color/black"
        android:hint="MÄÄRITTELEMÄTÖN"
        android:textColorHint="@color/black"
        android:padding="12dp"
        />

    <EditText
        android:id="@+id/addProductPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/edit_text_grey"
        android:backgroundTint="@color/edit_text_grey"
        android:hint="@string/new_product_price" />

    <Button
        android:id="@+id/addProductConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/new_product_confirm" />
</LinearLayout>
