<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/productNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:minHeight="40dp"
        android:scrollbars="horizontal"
        android:text="@string/hint_product_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/productCategoryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:textColor="@color/black"
        android:text="@string/new_product_category"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="3" />
    <TextView
        android:id="@+id/productPriceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:textColor="@color/black"
        android:text="@string/hint_product_price"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="2" />
</LinearLayout>