<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="240dp"
    android:minHeight="180dp"
    android:paddingHorizontal="5dp"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addCategoryHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_new_category"
        android:layout_gravity="center"
        android:padding="6dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/addCategoryNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/header_receipt_category" />

    <Button
        android:id="@+id/addCategoryConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/new_product_confirm" />
</LinearLayout>
