<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="240dp"
    android:minHeight="180dp"
    android:paddingHorizontal="5dp"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_to_ignore_add_header"
        android:layout_gravity="center"
        android:padding="6dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/addWordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textColorHint="@color/edit_text_grey"
        android:backgroundTint="@color/edit_text_grey"
        android:hint="@string/word_to_ignore_add_hint" />

    <Button
        android:id="@+id/addWordConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/camera_alert_positive" />
</LinearLayout>
